# agenda-defender-rust

./: .gitignore  .windsurfrules  Cargo.toml  README.md  package-lock.json  package.json
.github/workflows/: release.yml
src/: index.html  main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/scripts/: agenda-defender.js  tauri-api.js
src/styles/: styles.css
