[package]
name = "agenda-defender-rust"
version = "0.1.0"
edition = "2021"
description = "A meeting agenda timer application"
authors = ["Your Name"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.4", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.2.0", features = ["custom-protocol"] }
chrono = "0.4"

[features]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
